log
Wed, Mar 19, 2025  9:26:05 AM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|4
total_score: 10/70
3f6cb15
Wed, Mar 19, 2025 10:13:22 AM: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:67:7: error: invalid operands to binary * (have 'int' and 'int *')
       sum += *numero
              ~~~~~~~
       *numero = next(L);
       ^
Compilation failed
ec5cb4f
Wed, Mar 19, 2025 10:14:02 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:67:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       (*numero) = next(L);
                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
df6b7a9
Wed, Mar 19, 2025 10:15:27 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
94e339c
